--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    Hello world
+    <a class="button" href="./Problem1.html">Problem 1</a>
+    <a class="button" href="./Problem2.html">Problem 2</a>
     <script src="script.js"></script>
   </body>
 </html>
