complete problems 1 to 3

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <a class="button" href="./Problem1.html">Problem 1</a>
     <a class="button" href="./Problem2.html">Problem 2</a>
+    <a class="button" href="./Problem3.html">Problem 3</a>
     <script src="script.js"></script>
   </body>
 </html>
